src/styles/style.css
.map-header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-bottom: 13vh;
}



body{
    /* display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; */
    background-color: rgb(103, 204, 207);
    /* background: linear-gradient(#e66465, #9198e5); */
    transition: 3s;
    zoom: 80%
}

svg{
    padding: 10px;
}

#canvas{

    margin-left: 00px;
    min-width: 1000px;
    min-height: 620px
}

#canvas2{
    margin-left: 00px;
    min-width: 1000px;
    min-height: 620px
}



#tooltip{
    /* left: 20px; */
    /* top: 250px;
    position: absolute; */
    padding: 12px;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
    visibility: hidden;
    color:whitesmoke;
    width: 200px;
    padding-bottom: 10px;

    /* width: auto;
    height: auto; */
}

#tooltip2{
    padding: 12px;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
    visibility: hidden;
    color:whitesmoke;
    width: 200px;
    padding-bottom: 10px;
}


.county:hover{
    /* transform: translateY(-100px); */
    fill:dimgrey
}
/* path:hover{
    fill:darkgoldenrod;
} */

#leftSide{
    /* position: absolute; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* background-color: darkslategrey; */
}

#leftSide2{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#container{
    display: flex;
    justify-content: space-around;
    /* transform:translate(3%,40%); */
    /* align-items: center; */

}

#container2{
    display: flex;
    justify-content: space-around;
}

#legend{
    text-align: center;
    min-height: 150px;
    max-width: 180px;
    margin-top: 40px;
    margin-bottom: 40px;
    margin-left: -50px;
}

#toggle{
    position: relative;
    display:block;
    width: 160px;
    height: 80px;
    border-radius: 80px;
    background-color:aqua ;
    transition:0.5s;
    cursor: pointer;
    box-shadow: inset 0 8px 60px rgba(0,0,0,0.1),
                inset 0 8px 8px rgba(0,0,0,0.1),
                inset 0 -4px 4px rgba(0,0,0,0.1);
}

body.active{
    transition: 2s;
    background-color: rgb(109, 109, 109);
    /* background: linear-gradient(#704444, #939393); */
}

.hidden{
    display: none;
}




#toggle .indicator{
    position: absolute;
    top: 0;
    left: 0;
    width: 80px;
    height:80px;
    background: linear-gradient(to bottom, #444,#222);
    border-radius: 50%;
    transform: scale(0.9);
    box-shadow: 0 8px 40px rgba(0,0,0,0.5),
                inset 0 4px 4px rgba(255,255,255,0.2),
                inset 0 -4px 4px rgba(255,255,255,0.2);
    transition: 0.5s;
}

#toggle.active .indicator{
    left:80px;
}

#toggle.active{
    background-color: #fff;
    box-shadow: inset 0 2px 60px rgba(0,0,0,0.1),
                inset 0 2px 8px rgba(0,0,0,0.1),
                inset 0 -4px 8px rgba(0,0,0,0.05),

}


/* #title.active::after{
    transition: 0.5s;
    visibility:visible;
    position:absolute;
    content: 'Hello';
} */


#title.active{
    color: aliceblue;
    transition: 0.7s;
}

#toggle.active .indicator {
    left:80px;
}

.mylinks{
    margin-left: 1350px;
}


#bottom{
    display:flex;
    justify-content: space-between;
    align-items: center;
    bottom: 0;
    position: fixed;
    width: 100%;
}

#text{
    transform: translateX(-20%);
}

#guide{
    /* position: absolute; */
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
    font-size: 22px;
    font-weight: 800;
    width: 250px;
}

#guide2{
        /* position: absolute; */
        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
        font-size: 22px;
        font-weight: 800;
        width: 250px;
}


#tabs{
    position:absolute;
}


.w3-bar w3-black{
    top: 50px;
}

/* #title.active::after{
    content: 'US Unemployment Rate';
} */


button{
    background-color:rgb(223, 144, 144);
    cursor: pointer;
}

